- Added tabcompletion to commands - Added /renown top - Started compass tracking
Took 1 hour 21 minutes

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,5 @@ name: KiulSMPUtilitiesv2
 version: '${project.version}'
 main: kiul.kiulsmputilitiesv2.KiulSMPUtilitiesv2
 api-version: '1.20'
+commands:
+  renown:
