innumerable fixes - this dang thing won't stop blowing up in my face
Took 1 hour 2 minutes

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
                     <outputDirectory>C:\Users\Kyle\Desktop\test server\plugins</outputDirectory>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <outputDirectory>C:\Users\josha\Desktop\test server\plugins</outputDirectory>
+                </configuration>
+            </plugin>
         </plugins>
         <resources>
             <resource>
