--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,14 @@
                     <outputDirectory>C:\Users\josha\Desktop\test server\plugins</outputDirectory>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <outputDirectory>C:\Users\leero\Desktop\Paper Server\plugins</outputDirectory>
+                </configuration>
+            </plugin>
         </plugins>
         <resources>
             <resource>
